# pylint-header-checker

./: LICENSE  pyproject.toml
src/pylint-header-checker/: header_checker.py
